@@ -1,1 +1,1 @@
-DIST sushi-3.12.0.tar.xz 281976 SHA256 78594a858371b671671205e7b2518e7eb82ed8c2540b62f45a657aaabdf1a9ff SHA512 909cf9f820a1e78f1a74d08a152e6ad4713d25d4043be3c76739f73422764fbceb843ae083948cb1f7e7d862f011881087fe3ef4a4ee3afeeec47513bcf8dec2 WHIRLPOOL de3ddd9055ed664741846ab0de80d34803a0560d4ed5ecaaf2812d437d2f078dcae021cf8d3b6ebe68e3b38ae342b91b7dccb25b7391caed5477a7299e734b76
+DIST sushi-3.15.90.tar.xz 282496 SHA256 f0274bbc2c84e0f49d84aa02840556e5a4babe3e67cce0cb292e144bc488a61a SHA512 e7963ee281fca000c85774bcf14c339b29372e8bd80e74d71e61e1a21957565bf267579013949b7ab66cf754ba099a0c568b3542d6c81d721c0bd208a8bd2677 WHIRLPOOL cec9600817c65cf7b33cf34f28c522a0575ae609b79f4660e92b51db18bc2aef365b89850d5ea148441e99fcac6153c2047a7f256a0f4af6f446bb65a1cfdae4
