@@ -12,7 +12,7 @@ HOMEPAGE="http://git.gnome.org/browse/sushi"
 
 LICENSE="GPL-2+"
 SLOT="0"
-KEYWORDS="~alpha amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc x86"
+KEYWORDS="~amd64 ~x86"
 IUSE="office"
 
 # Optional app-office/unoconv support (OOo to pdf)
@@ -25,7 +25,7 @@ COMMON_DEPEND="
 	>=dev-libs/gobject-introspection-0.9.6
 	>=media-libs/clutter-1.11.4:1.0[introspection]
 	>=media-libs/clutter-gtk-1.0.1:1.0[introspection]
-	>=x11-libs/gtk+-3.4.0:3[introspection]
+	>=x11-libs/gtk+-3.13.2:3[introspection]
 
 	>=app-text/evince-3.0[introspection]
 	media-libs/freetype:2
@@ -33,7 +33,7 @@ COMMON_DEPEND="
 	media-libs/gst-plugins-base:1.0[introspection]
 	media-libs/clutter-gst:2.0[introspection]
 	media-libs/musicbrainz:5
-	net-libs/webkit-gtk:3[introspection]
+	net-libs/webkit-gtk:4[introspection]
 	x11-libs/gtksourceview:3.0[introspection]
 	x11-libs/libX11
 
