@@ -1,3 +1,9 @@
+*sushi-3.15.90 (14 Mar 2015)
+
+  14 Mar 2015; Poncho <poncho@spahan.ch> +sushi-3.15.90.ebuild,
+  -sushi-3.12.0.ebuild:
+  gnome-extra/sushi: version bump
+
 *sushi-3.12.0 (14 Mar 2015)
 
   14 Mar 2015; Poncho <poncho@spahan.ch> +metadata.xml, +sushi-3.12.0.ebuild:
